# model-audit-cli

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  README.md  gen_golden.py  pyproject.toml  requirements.txt  run  urls.txt
.github/workflows/: ci.yaml
src/: evaluator.py  metrics_engine.py
src/model_audit_cli/: dummy.py  errors.py  evaluator.py  gen_golden.py  logger.py  metrics_engine.py  model.py  models.py  url_handler.py
src/model_audit_cli/adapters/: client.py  code_fetchers.py  dataset_fetchers.py  github_fetcher.py  hf_client.py  hf_fetchers.py  model_fetchers.py
src/model_audit_cli/metrics/: __init__.py  base_metric.py  bus_factor.py  code_quality.py  dataset_and_code.py  dataset_quality.py  license.py  net_score.py  performance.py  ramp_up_time.py  registry.py  size.py  types.py
src/model_audit_cli/resources/: base_resource.py  code_resource.py  dataset_resource.py  model_resource.py
tests/: _coverage.xml  _junit.xml  test_code_quality.py  test_dataset_quality.py  test_engine.py  test_logger.py  test_metrics.py  test_ramp_up_time.py  test_smoke.py  utils.py
tests/data/: dummy.py
tests/unit/: test_hf_client.py
tests/unit/adapters/: test_code_fetchers.py  test_code_fetchers_github.py  test_code_fetchers_gitlab.py  test_code_fetchers_space.py  test_dataset_fetchers.py  test_hf_client.py  test_model_fetchers.py
tests/unit/metrics/: test_netscore.py  test_size.py
tests/unit/resources/: test_code_resource.py  test_dataset_resource.py  test_model_resource.py
