[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
strict = true
files = ["src/model_audit_cli", "tests"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "unit: fast, isolated tests",
  "integration: hits external systems (db, services, network)",
  "e2e: full end-to-end flows",
  "perf: performance/benchmark tests"
]

[project]
name = "model-audit-cli"
version = "0.1.0"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]