[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-audit-cli"
version = "0.1.0"
# If/when you have runtime deps, add them here:
dependencies = ["requests>=2.32", "pydantic>=2, <3"]

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "flake8-docstrings",
  "isort",
  "mypy",
  "pytest",
  "pytest-cov",
  "pre-commit",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
strict = true
files = ["src/model_audit_cli", "tests"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "unit: fast, isolated tests",
  "integration: hits external systems (db, services, network)",
  "e2e: full end-to-end flows",
  "perf: performance/benchmark tests"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]